--- a/previsao_de_receita_de_vendas.ipynb
+++ b/previsao_de_receita_de_vendas.ipynb
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 86,
    "id": "d109322a",
    "metadata": {},
    "outputs": [],
@@ -1077,8 +1077,8 @@
     "    y_test_pred = model_rgr.predict(X_test)\n",
     "\n",
     "    # Calcular metricas de MSE para os conjuntos de treinamento e teste\n",
-    "    mse_train = root_mean_squared_error(y_train, y_train_pred)\n",
-    "    mse_test = root_mean_squared_error(y_test, y_test_pred)\n",
+    "    mse_train = mean_squared_error(y_train, y_train_pred)\n",
+    "    mse_test = mean_squared_error(y_test, y_test_pred)\n",
     "\n",
     "    # Carcular R2SCORE, RESIDUOS para os conjuntos teste\n",
     "    r2score_test = r2_score(y_test, y_test_pred)\n",
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "id": "31e98928",
    "metadata": {},
    "outputs": [
@@ -1118,9 +1118,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE Treino:  2506.4020236861\n",
-      "MSE Teste:  2646.215898584393\n",
-      "% Dif. MSE Treino e Teste : 5.578270108985637\n",
+      "MSE Treino:  6284946.396532528\n",
+      "MSE Teste:  7049461.363862438\n",
+      "% Dif. MSE Treino e Teste : 12.164224149178123\n",
       "R2Score Teste:  -0.13451763390799448\n"
      ]
     }
